# MARS

./: .env.example  .gitignore  MARS-design.md  MARSClaudeSpec.md  app.py  architecture-overview.md  main.py  pyproject.toml
mars/: coordinator.py  models.py  observability.py
mars/agents/: doc_analysis.py  report_gen.py  synthesis.py  web_search.py
mars/tools/: document.py  verify_fact.py  web_search.py
